kube-manifests/k8s-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jenkins-demo
  name: jenkins-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jenkins-demo
  strategy: {}
  template:
    metadata:
      labels:
        app: jenkins-demo
    spec:
      volumes:
        - name: vol
          emptyDir: { }
      containers:
        - image: placeholder-image
          name: jenkins-demo
          volumeMounts:
            - mountPath: /tmp
              name: vol
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins-demo
  name: jenkins-demo-svc
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: jenkins-demo
  type: NodePort
