kube-manifests/k8s-alb-ingress.yaml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-demo
  labels:
    app: jenkins-demo
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: jenkins-demo
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: jenkins-demo-svc
      port:
        number: 8080
